src/generated/TemplatesParser.java
// Generated from C:/Users/VICTUS/Desktop/lectures/projects/CompilerProject/grammars/TemplatesGrammars/TemplatesParser.g4 by ANTLR 4.13.2
package generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TemplatesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOCTYPE=1, COMMENT=2, TAG_OPEN=3, TAG_CLOSE_TAG=4, J_BLOCK_START=5, J_EXPR_START=6, 
		TEXT=7, TAG_WS=8, TAG_EQUALS=9, TAG_STRING=10, VOID_TAG_ID=11, TAG_ID=12, 
		TAG_EXIT=13, TAG_EXIT_SELF=14, J_WS=15, J_IF=16, J_ELSE=17, J_ENDIF=18, 
		J_FOR=19, J_ENDFOR=20, J_IN=21, J_AND=22, J_OR=23, J_NOT=24, J_SET=25, 
		J_TRUE=26, J_FALSE=27, J_BLOCK_CLOSE=28, J_EXPR_CLOSE=29, J_EQ=30, J_NEQ=31, 
		PLUS=32, MINUS=33, MUL=34, DIV=35, J_LBRACK=36, J_RBRACK=37, J_DOT=38, 
		J_LPAREN=39, J_RPAREN=40, J_GT=41, J_LT=42, J_GTE=43, J_LTE=44, J_STRING=45, 
		J_INT=46, J_ID=47, J_ASSIGN=48;
	public static final int
		RULE_template = 0, RULE_content = 1, RULE_htmlElement = 2, RULE_attribute = 3, 
		RULE_jinjaElement = 4, RULE_jinjaPrint = 5, RULE_jinjaIf = 6, RULE_jinjaFor = 7, 
		RULE_jinjaSet = 8, RULE_expression = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"template", "content", "htmlElement", "attribute", "jinjaElement", "jinjaPrint", 
			"jinjaIf", "jinjaFor", "jinjaSet", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'</'", "'{%'", "'{{'", null, null, null, null, 
			null, null, null, "'/>'", null, "'if'", "'else'", "'endif'", "'for'", 
			"'endfor'", "'in'", "'and'", "'or'", "'not'", "'set'", null, null, "'%}'", 
			"'}}'", "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'['", "']'", "'.'", 
			"'('", "')'", null, null, "'>='", "'<='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOCTYPE", "COMMENT", "TAG_OPEN", "TAG_CLOSE_TAG", "J_BLOCK_START", 
			"J_EXPR_START", "TEXT", "TAG_WS", "TAG_EQUALS", "TAG_STRING", "VOID_TAG_ID", 
			"TAG_ID", "TAG_EXIT", "TAG_EXIT_SELF", "J_WS", "J_IF", "J_ELSE", "J_ENDIF", 
			"J_FOR", "J_ENDFOR", "J_IN", "J_AND", "J_OR", "J_NOT", "J_SET", "J_TRUE", 
			"J_FALSE", "J_BLOCK_CLOSE", "J_EXPR_CLOSE", "J_EQ", "J_NEQ", "PLUS", 
			"MINUS", "MUL", "DIV", "J_LBRACK", "J_RBRACK", "J_DOT", "J_LPAREN", "J_RPAREN", 
			"J_GT", "J_LT", "J_GTE", "J_LTE", "J_STRING", "J_INT", "J_ID", "J_ASSIGN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TemplatesParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TemplatesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TemplatesParser.EOF, 0); }
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).enterTemplate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).exitTemplate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplatesParserVisitor ) return ((TemplatesParserVisitor<? extends T>)visitor).visitTemplate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_template);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 232L) != 0)) {
				{
				{
				setState(20);
				content();
				}
				}
				setState(25);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(26);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContentContext extends ParserRuleContext {
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
	 
		public ContentContext() { }
		public void copyFrom(ContentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlContentContext extends ContentContext {
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public HtmlContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).enterHtmlContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).exitHtmlContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplatesParserVisitor ) return ((TemplatesParserVisitor<? extends T>)visitor).visitHtmlContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TextContentContext extends ContentContext {
		public TerminalNode TEXT() { return getToken(TemplatesParser.TEXT, 0); }
		public TextContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).enterTextContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).exitTextContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplatesParserVisitor ) return ((TemplatesParserVisitor<? extends T>)visitor).visitTextContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JinjaContentContext extends ContentContext {
		public JinjaElementContext jinjaElement() {
			return getRuleContext(JinjaElementContext.class,0);
		}
		public JinjaContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).enterJinjaContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).exitJinjaContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplatesParserVisitor ) return ((TemplatesParserVisitor<? extends T>)visitor).visitJinjaContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_content);
		try {
			setState(31);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TAG_OPEN:
				_localctx = new HtmlContentContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(28);
				htmlElement();
				}
				break;
			case J_BLOCK_START:
			case J_EXPR_START:
				_localctx = new JinjaContentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(29);
				jinjaElement();
				}
				break;
			case TEXT:
				_localctx = new TextContentContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(30);
				match(TEXT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementContext extends ParserRuleContext {
		public HtmlElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlElement; }
	 
		public HtmlElementContext() { }
		public void copyFrom(HtmlElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VoidElementContext extends HtmlElementContext {
		public TerminalNode TAG_OPEN() { return getToken(TemplatesParser.TAG_OPEN, 0); }
		public TerminalNode VOID_TAG_ID() { return getToken(TemplatesParser.VOID_TAG_ID, 0); }
		public TerminalNode TAG_EXIT() { return getToken(TemplatesParser.TAG_EXIT, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public VoidElementContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).enterVoidElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).exitVoidElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplatesParserVisitor ) return ((TemplatesParserVisitor<? extends T>)visitor).visitVoidElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SelfClosingTagContext extends HtmlElementContext {
		public TerminalNode TAG_OPEN() { return getToken(TemplatesParser.TAG_OPEN, 0); }
		public TerminalNode TAG_EXIT_SELF() { return getToken(TemplatesParser.TAG_EXIT_SELF, 0); }
		public TerminalNode TAG_ID() { return getToken(TemplatesParser.TAG_ID, 0); }
		public TerminalNode VOID_TAG_ID() { return getToken(TemplatesParser.VOID_TAG_ID, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public SelfClosingTagContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).enterSelfClosingTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).exitSelfClosingTag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplatesParserVisitor ) return ((TemplatesParserVisitor<? extends T>)visitor).visitSelfClosingTag(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NormalTagContext extends HtmlElementContext {
		public TerminalNode TAG_OPEN() { return getToken(TemplatesParser.TAG_OPEN, 0); }
		public List<TerminalNode> TAG_ID() { return getTokens(TemplatesParser.TAG_ID); }
		public TerminalNode TAG_ID(int i) {
			return getToken(TemplatesParser.TAG_ID, i);
		}
		public List<TerminalNode> TAG_EXIT() { return getTokens(TemplatesParser.TAG_EXIT); }
		public TerminalNode TAG_EXIT(int i) {
			return getToken(TemplatesParser.TAG_EXIT, i);
		}
		public TerminalNode TAG_CLOSE_TAG() { return getToken(TemplatesParser.TAG_CLOSE_TAG, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public NormalTagContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).enterNormalTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).exitNormalTag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplatesParserVisitor ) return ((TemplatesParserVisitor<? extends T>)visitor).visitNormalTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlElementContext htmlElement() throws RecognitionException {
		HtmlElementContext _localctx = new HtmlElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_htmlElement);
		int _la;
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new NormalTagContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(33);
				match(TAG_OPEN);
				setState(34);
				match(TAG_ID);
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==VOID_TAG_ID || _la==TAG_ID) {
					{
					{
					setState(35);
					attribute();
					}
					}
					setState(40);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(41);
				match(TAG_EXIT);
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 232L) != 0)) {
					{
					{
					setState(42);
					content();
					}
					}
					setState(47);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(48);
				match(TAG_CLOSE_TAG);
				setState(49);
				match(TAG_ID);
				setState(50);
				match(TAG_EXIT);
				}
				break;
			case 2:
				_localctx = new VoidElementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				match(TAG_OPEN);
				setState(52);
				match(VOID_TAG_ID);
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==VOID_TAG_ID || _la==TAG_ID) {
					{
					{
					setState(53);
					attribute();
					}
					}
					setState(58);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(59);
				match(TAG_EXIT);
				}
				break;
			case 3:
				_localctx = new SelfClosingTagContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				match(TAG_OPEN);
				setState(61);
				_la = _input.LA(1);
				if ( !(_la==VOID_TAG_ID || _la==TAG_ID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==VOID_TAG_ID || _la==TAG_ID) {
					{
					{
					setState(62);
					attribute();
					}
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(68);
				match(TAG_EXIT_SELF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributeContext extends ParserRuleContext {
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
	 
		public AttributeContext() { }
		public void copyFrom(AttributeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OnlyKeyAttributeContext extends AttributeContext {
		public TerminalNode TAG_ID() { return getToken(TemplatesParser.TAG_ID, 0); }
		public TerminalNode VOID_TAG_ID() { return getToken(TemplatesParser.VOID_TAG_ID, 0); }
		public OnlyKeyAttributeContext(AttributeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).enterOnlyKeyAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).exitOnlyKeyAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplatesParserVisitor ) return ((TemplatesParserVisitor<? extends T>)visitor).visitOnlyKeyAttribute(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class KeyValueAttributeContext extends AttributeContext {
		public TerminalNode TAG_EQUALS() { return getToken(TemplatesParser.TAG_EQUALS, 0); }
		public TerminalNode TAG_STRING() { return getToken(TemplatesParser.TAG_STRING, 0); }
		public TerminalNode TAG_ID() { return getToken(TemplatesParser.TAG_ID, 0); }
		public TerminalNode VOID_TAG_ID() { return getToken(TemplatesParser.VOID_TAG_ID, 0); }
		public KeyValueAttributeContext(AttributeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).enterKeyValueAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).exitKeyValueAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplatesParserVisitor ) return ((TemplatesParserVisitor<? extends T>)visitor).visitKeyValueAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attribute);
		int _la;
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new KeyValueAttributeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				_la = _input.LA(1);
				if ( !(_la==VOID_TAG_ID || _la==TAG_ID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(72);
				match(TAG_EQUALS);
				setState(73);
				match(TAG_STRING);
				}
				break;
			case 2:
				_localctx = new OnlyKeyAttributeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				_la = _input.LA(1);
				if ( !(_la==VOID_TAG_ID || _la==TAG_ID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JinjaElementContext extends ParserRuleContext {
		public JinjaPrintContext jinjaPrint() {
			return getRuleContext(JinjaPrintContext.class,0);
		}
		public JinjaIfContext jinjaIf() {
			return getRuleContext(JinjaIfContext.class,0);
		}
		public JinjaForContext jinjaFor() {
			return getRuleContext(JinjaForContext.class,0);
		}
		public JinjaSetContext jinjaSet() {
			return getRuleContext(JinjaSetContext.class,0);
		}
		public JinjaElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jinjaElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).enterJinjaElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).exitJinjaElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplatesParserVisitor ) return ((TemplatesParserVisitor<? extends T>)visitor).visitJinjaElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JinjaElementContext jinjaElement() throws RecognitionException {
		JinjaElementContext _localctx = new JinjaElementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_jinjaElement);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				jinjaPrint();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				jinjaIf();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				jinjaFor();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				jinjaSet();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JinjaPrintContext extends ParserRuleContext {
		public TerminalNode J_EXPR_START() { return getToken(TemplatesParser.J_EXPR_START, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode J_EXPR_CLOSE() { return getToken(TemplatesParser.J_EXPR_CLOSE, 0); }
		public JinjaPrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jinjaPrint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).enterJinjaPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).exitJinjaPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplatesParserVisitor ) return ((TemplatesParserVisitor<? extends T>)visitor).visitJinjaPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JinjaPrintContext jinjaPrint() throws RecognitionException {
		JinjaPrintContext _localctx = new JinjaPrintContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_jinjaPrint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(J_EXPR_START);
			setState(84);
			expression(0);
			setState(85);
			match(J_EXPR_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JinjaIfContext extends ParserRuleContext {
		public ContentContext content;
		public List<ContentContext> thenBlock = new ArrayList<ContentContext>();
		public List<ContentContext> elseBlock = new ArrayList<ContentContext>();
		public List<TerminalNode> J_BLOCK_START() { return getTokens(TemplatesParser.J_BLOCK_START); }
		public TerminalNode J_BLOCK_START(int i) {
			return getToken(TemplatesParser.J_BLOCK_START, i);
		}
		public TerminalNode J_IF() { return getToken(TemplatesParser.J_IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> J_BLOCK_CLOSE() { return getTokens(TemplatesParser.J_BLOCK_CLOSE); }
		public TerminalNode J_BLOCK_CLOSE(int i) {
			return getToken(TemplatesParser.J_BLOCK_CLOSE, i);
		}
		public TerminalNode J_ENDIF() { return getToken(TemplatesParser.J_ENDIF, 0); }
		public TerminalNode J_ELSE() { return getToken(TemplatesParser.J_ELSE, 0); }
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public JinjaIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jinjaIf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).enterJinjaIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TemplatesParserListener ) ((TemplatesParserListener)listener).exitJinjaIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TemplatesParserVisitor ) return ((TemplatesParserVisitor<? extends T>)visitor).visitJinjaIf(this);
			else return visitor.visitChildren(this);
		}
	}
